--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Yuqing(Brandy)Huang
-logo: https://BrandyHuang.github.io/111.jpg
+logo: 111.jpg
 description: Hello, welcome to my world!
 theme: jekyll-theme-minimal
